--- a/app/src/main/res/layout/add_newevent_layout.xml
+++ b/app/src/main/res/layout/add_newevent_layout.xml
@@ -30,17 +30,30 @@
             android:layout_height="40dp"
             android:layout_margin="10dp"
             android:background="@drawable/ic_baseline_more_time_24"
-            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
+            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
+            android:layout_weight="1"/>
         <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text=" 00:00 AM"
-            android:gravity="center"
-            android:textSize="30sp"
-            android:textColor="@color/white"
-            android:textStyle="bold"
             android:id="@+id/eventtime"
-            android:layout_margin="10dp"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:gravity="center"
+            android:text="00:00 AM"
+            android:textColor="@android:color/white"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText"
+            android:layout_weight="2"
+            />
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Alarm Me"
+            android:textColor="@android:color/white"
+            android:buttonTint="@android:color/white"
+            android:id="@+id/alarmme"
+            android:layout_weight="1"/>
+
     </LinearLayout>
 
     <Button
